# SleepManager

./: .gitignore  CMakeLists.txt  Makefile  README.md  SleepManager  SleepManager.depend  [:w  main.cpp  sleep_server
include/: ClientPC.h  DiscoverySubservice.h  ElectionMonitor.h  ManagementSubservice.h  MonitoringSubservice.h  ThreadManager.hpp  WebServices.h  address.h  channel.h  classes.h  discovery.h  discoveryalt.h  helper.h  interface.h  io_exception.h  lock.h  management.h  manager.h  monitoring.h  node.h  packet.h  participant.h  replicationSubservice.h  server.h  socket.h  thread.hpp  work_station.h
src/: ClientPC.cpp  DiscoverySubservice.cpp  ElectionMonitor.cpp  ManagementSubservice.cpp  MonitoringSubservice.cpp  ThreadManager.cpp  WebServices.cpp  address.cpp  classes.cpp  discovery.cpp  discovery.h  discoveryalt.cpp  helper.cpp  helper.h  interface.cpp  io_exception.cpp  main.c  main.cpp  management.cpp  management.h  manager.c  manager.cpp  monitoring.cpp  monitoring.h  node.cpp  packet.cpp  participant.c  participant.cpp  participant.h  replicationSubservice.cpp  server.cpp  socket.cpp  thread.cpp  work_station.cpp
tests/: CMakeLists.txt  discovery_test.cpp
